<resources>
    <string name="app_name">Play Juegos</string>
    <string name="play_juegos">Play Juegos</string>
    <string name="play">Play</string>
    <string name="new_player">New Player</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="phonetic_name">Phonetic Name</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="change">change</string>
    <string name="profile">profile</string>
    <string name="camera">camera</string>
    <string name="person">person</string>
    <string name="buscar">Buscar</string>
    <string name="action_add">Añadir</string>
    <string name="settings">Ajustes</string>
    <string name="todo">TODO</string>
    <string name="nickname">Nickname</string>
    <string name="angry_birds">Angry Birds</string>
    <string name="dragon_fly">Dragon Fly</string>
    <string name="eligeOpcion">Elige una opción:</string>
    <string name="hill_climbing_racing">Hill Climbing Racing</string>
    <string name="pocket_soccer">Pocket Soccer</string>
    <string name="radiant_defense">Radiant Defense</string>
    <string name="ninja_jump">Ninja Jump</string>
    <string name="air_control">Air Control</string>
    <string name="plataformas">Plataformas:</string>
    <string name="generos">Generos:</string>
    <string name="ps4">PS4</string>
    <string name="rol">Rol</string>
    <string name="pc">PC</string>
    <string name="xbox">XBOX</string>
    <string name="wii">WII</string>
    <string name="wiiu">WIIU</string>
    <string name="_3ds">3DS</string>
    <string name="x360">X360</string>
    <string name="aventura">Aventura</string>
    <string name="arcade">Arcade</string>
    <string name="deportes">Deportes</string>
    <string name="disparos">Disparos</string>
    <string name="estrategia">Estrategia</string>
    <string name="juegos_de_mesa">Juegos de mesa</string>
    <string name="juegos_musicales">Juegos musicales</string>
    <string name="lucha">Lucha</string>
    <string name="puzzles">Puzzles</string>
    <string name="accion">Accion</string>
    <string name="simulacion">Simulacion</string>
    <string name="error_con_los_chips">Error con los chips</string>
    <string name="maria_mata">Maria Mata</string>
    <string name="antonio_sanz">Antonio Sanz</string>
    <string name="carlos">Carlos</string>
    <string name="berta">Berta</string>
    <string name="hector_campos">Hector Campos</string>
    <string name="ismael">Ismael</string>
    <string name="rodrigo">Rodrigo</string>
    <string name="alex">Alex</string>
    <string name="year2014">2014</string>
    <string name="year1890">1890</string>
    <string name="year965">965</string>
    <string name="year945">945</string>
    <string name="year879">879</string>
    <string name="year678">678</string>
    <string name="year514">514</string>
    <string name="year398">398</string>
</resources>