<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1,2"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="4dp"
    android:shrinkColumns="0,1"
    tools:context=".NewPlayer">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imagePerson"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/person"
            app:srcCompat="@drawable/ic_person_foreground" />

        <EditText
            android:id="@+id/personName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck"
            android:autofillHints="" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/phoneticName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phonetic_name"
            android:inputType="textPersonName"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextFields,TouchTargetSizeCheck" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/personNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2"
            android:ems="10"
            android:hint="@string/nickname"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageCamera"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_camera_foreground"
            android:contentDescription="@string/camera" />

        <ImageView
            android:id="@+id/imageProfilePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/profile"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/btnPhotoChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/Myestilo"
            android:text="@string/change" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imagePhone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_phone_foreground"
            android:contentDescription="@string/phone_number" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="number"
            tools:ignore="TextFields,TouchTargetSizeCheck"
            android:autofillHints="" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spinner"
            android:layout_column="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageMail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_email_foreground"
            android:contentDescription="@string/e_mail" />

        <EditText
            android:id="@+id/eMailAdress"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

    </TableRow>

</TableLayout>